Update to Minecraft 1.19
Drop support for 1.17 and outdated 1.18 builds.